# Stocks

./: .gitignore  Makefile  Pipfile  README.md  adjust_prices.py  broker.py  client.py  delete_data.py  dig.html  example.py  get_announcements.py  get_entry.py  get_pnf.py  get_prices.py  get_reports.py  logfile.txt  main.py  organize.py  pnf_demo.py  poink_check.py  portfolio_checker.py  price_check.py  pyproject.toml  rsi.py  scratch.py  scratch.txt  server.py  stop_everything.sh  strategy_checker.py  tasks.py
.history/: Broker_20220106184147.py  Broker_20220115152924.py  Broker_20220115153822.py  Broker_20220115153830.py  Broker_20220122123032.py  Broker_20220122123808.py  Broker_20220122125530.py  Broker_20220122125543.py  Broker_20220324183255.py  Broker_20220324183533.py  Broker_20220324183642.py  Broker_20220324185012.py  Broker_20220324185421.py  Broker_20220326120913.py  Broker_20220326121233.py  Broker_20220326121236.py  Broker_20220326121250.py  Broker_20220326121609.py  Broker_20220326121747.py  Broker_20220326121843.py  Broker_20220326121925.py  Broker_20220326122027.py  Broker_20220326122220.py  Broker_20220326124216.py  Broker_20220326125011.py  Broker_20220326125031.py  Broker_20220326125116.py  Broker_20220326125149.py  Broker_20220326125249.py  Broker_20220331181311.py  Broker_20220331181339.py  Broker_20220331181423.py  Broker_20220331181457.py  Broker_20220331185759.py  Broker_20220331185816.py  Broker_20220414181140.py  Broker_20220414181425.py  Broker_20220421181740.py  Broker_20220421181827.py  Pipfile_20220317185832  (+589 more)
Calculate/: calculations.py  momentum.py
actors/: PNF_actor.py  broker_actor.py  generate_report_.actor.py  save_price.py  save_report.py
errors/: AAC-2019-01-30-2022-11-30.txt
examples/: crazy.py  pnf_demo.py
get_data/: __init__.py  broker_actor.py  generate_report_actor.py  get_prices.py  helpers.py  pnf_actor.py  report_save_actor.py  save_price_actor.py
misc/: adjust_prices.py  client.py  example.py  get_announcements.py  get_entry.py  get_reports.py  main.py  rsi.py  scratch.py  setup.py
pnf/: box.py  chart.py  pnf.py  psm.py
problem_json/: AAC-2019-01-30-2022-11-30.json  (+3 more)
values/: order.py  (+3 more)
(+180 files in other folders)
