[tool.poetry]
name = "stock"
version = "0.1.0"
description = ""
authors = ["Joel Moore", "Guanghan Li"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.9"
alpaca_trade_api = "*"
peewee = "*"
python-dotenv = "*"
invoke = "*"
sty = "*"
schema = "*"
pymonad = "*"
thespian = "*"
janus = "*"
mplfinance = "*"
psycopg2-binary = "^2.9.3"
python-dateutil = "^2.8.2"
pyoink = {path="../pyoink", develop=true}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"