[tool.poetry]
name = "stock"
version = "0.1.0"
description = ""
authors = ["Joel Moore", "Guanghan Li"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.10"
alpaca_trade_api = { path="library/alpaca-trade-api-python", develop=true }
peewee = "*"
python-dotenv = "*"
invoke = "*"
sty = "*"
thespian = "*"
janus = "*"
mplfinance = "*"
psycopg2-binary = "^2.9.3"
python-dateutil = "^2.8.2"
pyoink = {path="../pyoink", develop=true}
more-itertools = "^9.0.0"
prettytable = "^3.6.0"
autobahn = {version="^23.1.2", extras=["serialization"]}
flake8 = "^6.0.0"
autoflake = "^2.0.1"
black = "^23.1.0"
tqdm = "^4.65.0"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
